[tool.poetry]
name = "omni-tutor"
version = "1.0.0"
description = "Live AI Tutor with Gemini"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
google-generativeai = "^0.3.0"
google-cloud-texttospeech = "^2.14.0"
google-cloud-vision = "^3.4.0"
Pillow = "^10.1.0"
websockets = "^12.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
